# lenstool_idPIE_tutorial

./: .bashrc  .gitignore  .readthedocs.yaml  CNAME  README.rst  pyproject.toml  requirements.txt
docs/: CNAME
docs/doxygen/: Doxyfile
docs/source/: conf.py  index.rst  installation.rst  potfile.rst  usage.rst
docs/sphinx/build_old/html/: .buildinfo  InputOutput.html  api.html  genindex.html  index.html  installation.html  method.html  misc_file.html  objects.inv  parameter_file.html  pywrap.html  search.html  searchindex.js  tutorial.html
docs/sphinx/html_BB/: ._index.html  InputOutput.html  NFW.html  Supported_pot.html  X-ray.html  api.html  defining_model.html  general_method_X.html  genindex.html  idpie.html  image_reconstruction.html  index.html  installation.html  method.html  misc_file.html  objects.inv  parameter_file.html  potfile.html  pywrap.html  search.html  searchindex.js  strong_lensing.html  tutorial.html  tutorial_idpie.html  usage.html  weak_lensing.html
docs/sphinx/html_BB/.doctrees/: InputOutput.doctree  NFW.doctree  Supported_pot.doctree  X-ray.doctree  api.doctree  defining_model.doctree  environment.pickle  general_method_X.doctree  idpie.doctree  image_reconstruction.doctree  index.doctree  installation.doctree  method.doctree  misc_file.doctree  (+8 more)
docs/sphinx/source/: Custom_Potential_list.rst  GuideForJupyter.ipynb  InputOutput.rst  Other_sect.rst  Supported_pot.rst  conf.py  index.rst  installation.rst  lenstool.rst  method.rst  modules.rst  parameter_file.rst  pywrap.rst  strong_lensing.rst  template_read_the_doc.rst  tutorial.rst
(+225 files in other folders)
